--- a/backend-application-server/pom.xml
+++ b/backend-application-server/pom.xml
@@ -6,6 +6,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>User</module>
+        <module>MeterImages</module>
     </modules>
     <groupId>org.cmpe295</groupId>
     <artifactId>backend-application-server</artifactId>
@@ -38,6 +39,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
     <build>
