--- a/backend-application-server/MeterImages/pom.xml
+++ b/backend-application-server/MeterImages/pom.xml
@@ -21,6 +21,17 @@
             <artifactId>aws-java-sdk</artifactId>
             <version>1.12.634</version>
         </dependency>
+        <!-- start of db related dependencies -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <!-- end of db related dependencies -->
 
     </dependencies>
 
