--- a/backend-application-server/MeterImages/src/main/resources/application.properties
+++ b/backend-application-server/MeterImages/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=${APP_PORT:8082}
 spring.datasource.url=jdbc:mysql://${DATASOURCE_URL:localhost}:${PORT:3306}/${DB_NAME:utilitymanagement}
 spring.datasource.username=${DATASOURCE_USERNAME:root}
 spring.datasource.password=${DATASOURCE_PASSWORD:password}
@@ -6,4 +7,4 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.hibernate.defer-datasource-initialization = true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQLInnoDBDialect
-server.port=${APP_PORT:8082}
+aws.s3.bucket-name=your-s3-bucket-name
