Adding Logging. Trying to fix security forbidden issue in meterImages module

--- a/backend-application-server/MeterImages/src/main/resources/application.properties
+++ b/backend-application-server/MeterImages/src/main/resources/application.properties
@@ -7,4 +7,6 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.hibernate.defer-datasource-initialization = true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQLInnoDBDialect
-aws.s3.bucket-name=your-s3-bucket-name
+logging.level.software.amazon.awssdk=DEBUG
+logging.level.org.springframework.web=DEBUG
+aws.region=us-west-1
