Adding some logging and updating max file size for image upload to 10 MB

--- a/backend-application-server/MeterImages/src/main/resources/application.properties
+++ b/backend-application-server/MeterImages/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQLInnoDBDialect
 logging.level.software.amazon.awssdk=DEBUG
 logging.level.org.springframework.web=DEBUG
 aws.region=us-west-1
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
