--- a/backend-application-server/pom.xml
+++ b/backend-application-server/pom.xml
@@ -7,6 +7,8 @@
     <modules>
         <module>User</module>
         <module>MeterImages</module>
+        <module>UtilityAccountManagement</module>
+        <module>Integration</module>
     </modules>
     <groupId>org.cmpe295</groupId>
     <artifactId>backend-application-server</artifactId>
