Completing the pipeline framework

--- a/mlops-project/config/ufpr_amr.yaml
+++ b/mlops-project/config/ufpr_amr.yaml
@@ -18,6 +18,6 @@ tasks:
         - evaluate_model
     evaluate_model:
       next:
-        - create_plots
-    create_plots:
+        - create_report
+    create_report:
       next: []
