A new messages endpoint

--- a/backend-application-server/User/src/main/resources/application.properties
+++ b/backend-application-server/User/src/main/resources/application.properties
@@ -16,3 +16,5 @@ spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQLInnoDBDialect
 server.port=${APP_PORT:8081}
 #Logging for Database
 logging.level.org.springframework.jdbc.core=DEBUG
+#Application specific configurations
+reading.threshold.days=30
