--- a/backend-application-server/MeterImages/src/main/resources/application.properties
+++ b/backend-application-server/MeterImages/src/main/resources/application.properties
@@ -12,4 +12,6 @@ logging.level.org.springframework.web=DEBUG
 aws.region=us-west-1
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+#Application specific configurations
+reading.threshold.days=30
 
