--- a/backend-application-server/docker-compose.yml
+++ b/backend-application-server/docker-compose.yml
@@ -2,7 +2,8 @@ services:
   utility-management-db:
     container_name: utility-management-db
     # docker image to be used
-    image: mysql
+    image: mysql:8.0.0
+    command: ["mysqld", "--default-authentication-plugin=mysql_native_password"]
     environment:
       MYSQL_DATABASE: 'db'
       # So you don't have to use root, but you can if you like
@@ -14,8 +15,6 @@ services:
     ports:
       # <Port exposed> : < MySQL Port running inside container>
       - '3306:3306'
-    # Where our data will be persisted
-    command: --default-authentication-plugin=mysql_native_password
     volumes:
       - utility-management-db:/var/lib/mysql
       - ./init/01.sql:/docker-entrypoint-initdb.d/init-script.sql
