--- a/backend-application-server/MeterImages/src/main/resources/application.properties
+++ b/backend-application-server/MeterImages/src/main/resources/application.properties
@@ -14,4 +14,5 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 #Application specific configurations
 reading.threshold.days=30
+prediction.url=${PREDICTION_URL:http://127.0.0.1:8001/predict}
 
